# quantflow

./: .env.example  .gitignore  00_ARCHITECTURE.md  01_DATA_PIPELINE.md  02_MODELS_STATISTICAL.md  03_MODELS_ML.md  04_MODELS_RISK_PORTFOLIO.md  05_MODELS_ADVANCED.md  06_AGENTIC_INTELLIGENCE.md  07_SIGNAL_AGGREGATION.md  08_SAAS_PRODUCT.md  09_TESTING_STANDARDS.md  10_IMPLEMENTATION_ROADMAP.md  404.html  CLAUDE.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  docs.yml
deployment/docker-compose/: index.html
deployment/kubernetes/: index.html
deployment/monitoring/: index.html
docker/: Dockerfile  Dockerfile.frontend
docker/alertmanager/: alertmanager.yml
docker/grafana/dashboards/: quantflow.json
docker/grafana/provisioning/dashboards/: quantflow.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/initdb/: 001_extensions.sql
docker/nginx/: nginx.conf
docker/prometheus/: alert_rules.yml  prometheus.yml
docs/: index.md
docs/deployment/: docker-compose.md  kubernetes.md  monitoring.md
frontend/: .env.local.example  Dockerfile  jest.config.js  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/__mocks__/: recharts.js
frontend/__tests__/: api.test.ts  components.test.tsx  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/intelligence/: page.tsx
frontend/app/(dashboard)/portfolio/: page.tsx
frontend/app/(dashboard)/screener/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/(dashboard)/signals/[symbol]/: page.tsx
frontend/app/pricing/: page.tsx
frontend/components/charts/: ConfidenceBar.tsx  EfficientFrontier.tsx  ModelContribChart.tsx  RegimeTimeline.tsx  SignalGauge.tsx
frontend/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/components/signals/: RecommendationCard.tsx  RiskWarnings.tsx  SignalHistory.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx
frontend/lib/: api.ts  store.ts  types.ts  utils.ts  websocket.ts
k8s/: api-deployment.yaml  celery-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml.template
quantflow/: __init__.py
quantflow/agents/: __init__.py  ceo_model.py  orchestrator.py  schemas.py  sentiment.py
quantflow/agents/llm_clients/: __init__.py  anthropic_agent.py  base_client.py  openai_agent.py  perplexity_agent.py
quantflow/agents/scrapers/: __init__.py  web_scraper.py
quantflow/api/: __init__.py  celery_app.py  main.py
quantflow/api/auth/: __init__.py  dependencies.py  jwt.py  router.py  schemas.py
quantflow/api/middleware/: __init__.py  logging.py  metrics.py  rate_limit.py
quantflow/api/routers/: __init__.py  admin.py  intelligence.py  portfolio.py  signals.py  subscription.py
quantflow/api/tasks/: __init__.py  agent_tasks.py
quantflow/api/websockets/: __init__.py  manager.py  router.py
quantflow/backtest/: __init__.py  engine.py  report.py
quantflow/config/: __init__.py  constants.py  logging.py  settings.py
quantflow/data/: __init__.py  features.py
quantflow/data/fetchers/: __init__.py  base.py  yfinance_fetcher.py
quantflow/data/processors/: __init__.py  pipeline.py
quantflow/db/: __init__.py  engine.py  models.py
quantflow/db/migrations/: env.py
quantflow/db/migrations/versions/: .gitkeep  001_initial.py  20240101_0000_001_initial.py
quantflow/models/: __init__.py  base.py
quantflow/models/advanced/: __init__.py  bayesian_nn.py  neural_ode.py  neural_sde.py
quantflow/models/derivatives/: __init__.py  heston.py  vol_surface.py
quantflow/models/microstructure/: __init__.py  hawkes.py  optimal_execution.py
quantflow/models/ml/: __init__.py  base_trainer.py  classic_ml.py  deep_rl.py  gradient_boosting.py  recurrent.py  transformer_ts.py
quantflow/models/portfolio/: __init__.py
quantflow/models/risk/: __init__.py
quantflow/models/statistical/: __init__.py  arima.py  factor_pca.py  garch.py  kalman.py  markov_switching.py  var_vecm.py
quantflow/portfolio/: __init__.py  black_litterman.py  hrp.py  optimizer.py
quantflow/risk/: __init__.py  evt.py  stress_tester.py  var_es.py
quantflow/signals/: __init__.py  aggregator.py  calibrator.py  explainer.py  normalizer.py  recommendation.py  regime_detector.py
scripts/: create_admin.py
search/: search_index.json
tests/: conftest.py  test_deployment.py
tests/backtest/: __init__.py  test_strategy_backtest.py
tests/integration/: __init__.py  test_agents_live.py  test_api_endpoints.py
tests/unit/: __init__.py  test_advanced_models.py  test_agents.py  test_data_pipeline.py  test_models_ml.py  test_models_statistical.py  test_risk_portfolio_signals.py
